Color fixes for nav menu item readability

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -648,7 +648,7 @@ body.nav-opened .nav {
     text-align: right;
     font-size: 1.2rem;
     vertical-align: bottom;
-    color: #B8B8B8;
+    color: #ffffff;
     content: counter(item, lower-roman);
     counter-increment: item;
 }
@@ -668,7 +668,7 @@ body.nav-opened .nav {
 .nav li a:after {
     display: inline-block;
     content: " .......................................................";
-    color: rgba(255,255,255,0.2);
+    color: #ffffff;
     margin-left: 5px;
 }
 .nav .nav-current:before {
@@ -683,14 +683,14 @@ body.nav-opened .nav {
 
 .nav a:link,
 .nav a:visited {
-    color: #B8B8B8;
+    color: #ffffff;
 }
 
 .nav li.nav-current a,
 .nav a:hover,
 .nav a:active,
 .nav a:focus {
-    color: #fff;
+    color: rgba(0,0,0,0.8);
 }
 
 .subscribe-button {
@@ -704,7 +704,7 @@ body.nav-opened .nav {
     right: 30px;
     height: 38px;
     padding: 0 20px;
-    color: #ffffff !important; /* Overides `.nav a:link, .nav a:visited` colour */
+    color: #fffffff !important; /* Overides `.nav a:link, .nav a:visited` colour */
     text-align: center;
     font-size: 12px;
     font-family: "Open Sans", sans-serif;
@@ -845,7 +845,7 @@ body.nav-opened .nav {
 .nav-opened .menu-button {
     padding: 0 12px;
     background: #ABADAF;
-    border-color: #ffffff;
+    border-color: #fffffff;
     color: #fff;
     -webkit-transform: translate3D(94px, 0, 0);
         -ms-transform: translate3D(94px, 0, 0);
